--- a/views/index.html
+++ b/views/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Youtube Downloader</title>
+    <title>ようつべダウンローダー</title>
   </head>
   <body>
+    <h1>ようつべの動画をダウンロードするんだぞ！！！</h1>
+    <h2>あ、これ
     <form action="/download" method="get">
       <label for="url">Youtube URL: https://youtube.com/watch?v=</label>
       <input type="text" id="url" name="url">
-      <input type="submit" value="Download">
+      <input type="submit" value="ダウンロード">
     </form>
   </body>
 </html>
