--- a/views/index.html
+++ b/views/index.html
@@ -6,11 +6,12 @@
   </head>
   <body>
     <h1>ようつべの動画をダウンロードするんだぞ！！！</h1>
-    <h2>あ、これ
+    <h2>作成者…mersonn621様、天神らぬ</h2>
     <form action="/download" method="get">
       <label for="url">Youtube URL: https://youtube.com/watch?v=</label>
       <input type="text" id="url" name="url">
       <input type="submit" value="ダウンロード">
     </form>
+     <h2>ダウンロードしたら、フォルダの中のVideoっていうファイルから閲覧してね！<br>早めに削除することを推奨します</h2>
   </body>
 </html>
